# pyAMICA

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  AGENTS.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FEATURE_PARITY.md  LICENSE  MIGRATION_PLAN.md  PROGRESS_SUMMARY.md  README.md  THIRD_PARTY_NOTICES.md  _typos.toml  codecov.yml  mkdocs.yml  paper.bib  paper.md  pyproject.toml  pytest.ini  requirements-torch.txt  setup.py  test_enhanced_amica.py  test_torch_amica.py  test_torch_fixed.py  validate_implementations.py
.context/: feature_parity.md  ideas.md  migration_plan.md  mps_pathways.md  paper-applications-draft.md  phase1_baseline.md  plan.md  progress_summary.md  research.md  scratch_history.md
.context/decisions/: 0001-torch-backend-natural-gradient-em.md  0002-adaptive-pdf-families.md  0003-best-iterate-safeguard.md  README.md
.context/issue-136/: matlab_viz_verification.md
.context/issue-144-parity-data-adequacy/: bundled_sample_newton0.py  run_5seed_newton0.sh  run_fortran_only.py  run_ng_only.py  test_ds002718_32ch.py  test_ds002718_hallu.py
.context/issue-145/: diagnostic.md  full_data_reproduction.md  same_init_result.md  setup_and_config.md
.context/issue-155/: matlab_interop_verification.md
.context/issue-159/: gate_check.py  gate_compare.m  gate_prep.py  matlab_interop_verification.md
.context/issue-21/: corrected_mstep_prototype.py  handoff.md  reproduce_root_cause.py  root_cause.md
.context/issue-24/: drift_localization.md  findings.md  localize_drift.py  root_cause_Aupdate.py  verify_init_basin.py
.context/issue-27/: amari_distance.py  amari_summary.json  multimodel_c_update.md  multimodel_distributional_equivalence.md  multimodel_ensemble.py  per_run_detail.csv
.context/issue-51/: best_iterate_safeguard.md  ensemble_ll.npz  ensemble_ll.py  plot_ll.py
.context/issue-63/: perf_findings.md
.context/issue-77/: benchmark_findings.md
.context/issue-84/: phase1_build_notes.md  phase2_cpu_scaling.md  phase3_decomp_equivalence.md
.context/issue-90/: datasize_sweep_findings.md  ksweep_findings.md
.github/workflows/: ci.yml  docs.yml  draft-pdf.yml  publish.yml  release-binaries.yml  typos.yml
.rules/: ci_cd.md  documentation.md  git.md  python.md
benchmarks/: README_dimsweep.md  benchmark_decompose.py  benchmark_dimsweep.py  benchmark_gpu.py  benchmark_runtime.py  channel_selection.py
benchmarks/fortran/: README.md  build_amica.sh  vmath_shim.c
docs/: changelog.md  getting-started.md  index.md
docs/api/: amica.md  index.md  metrics.md  mlx-backend.md  mne-compat.md  native-backend.md  numpy-backend.md  torch-backend.md  viz.md
docs/concepts/: how-amica-works.md  index.md  what-is-amica.md  what-is-ica.md
docs/development/: contributing.md  testing.md
docs/guides/: backends.md  eeglab.md  index.md  validation.md
docs/javascripts/: mathjax.js
examples/: torch_example.py
native/: .gitignore  README.md  build.sh  mpi_single.c  mpi_single.f90  patch_sources.py  validate_shim.sh
pamica/: __init__.py  amica.py  version.py  viz.py
pamica/metrics/: pmi.py
pamica/mlx_impl/: __init__.py  core.py
pamica/mne_compat/: __init__.py  core.py
pamica/native/: __main__.py  engine.py  resolver.py
pamica/numpy_impl/: __init__.py  cli.py  core.py  load.py  pdf.py  viz.py
pamica/sample_data/: ATTRIBUTION.md  sample_params.json
pamica/sample_data/amicaout/: LL  S  c  sbeta
pamica/sample_data/pyresults/: W.npy  mu.npy  nd.npy  out.txt  sphere.npy
pamica/tests/: test_amari_distance.py  test_amica.py  test_dimsweep_threads.py  test_fortran_adapter.py  test_metrics_mir.py  test_metrics_pmi.py  test_native_engine.py  test_numpy_reject.py  test_pamica.py  test_sample_data.py  test_viz.py
pamica/tests/mlx_tests/: test_mlx_backend.py
pamica/tests/mne_tests/: test_mne_wrapper.py
pamica/tests/torch_tests/: __init__.py  test_amica_ng_wrapper.py  test_edge_cases.py  (+7 more)
pamica/torch_impl/: __init__.py  core.py  utils.py
pyAMICA/: __init__.py  amica.py  amica_cli.py  amica_data.py  amica_load.py  amica_newton.py  amica_pdf.py  amica_utils.py  amica_viz.py  params.json  pyAMICA.py  test_amica.py  version.py  viz.py
pyAMICA/metrics/: __init__.py  _common.py  mir.py  pmi.py
pyAMICA/mlx_impl/: __init__.py  core.py
pyAMICA/native/: __init__.py  __main__.py  engine.py  resolver.py
pyAMICA/numpy_impl/: __init__.py  cli.py  core.py  data.py  load.py
pyAMICA/sample_data/: ATTRIBUTION.md  input.param  sample_params.json
pyAMICA/tests/: test_amari_distance.py  test_amari_ensemble_script.py  test_amica.py  test_channel_selection.py  test_decompose_equiv.py  test_dimsweep_threads.py  test_fortran_adapter.py  test_metrics_mir.py  test_metrics_pmi.py  test_native_engine.py  test_numpy_reject.py  test_pyAMICA.py  test_sample_data.py  test_viz.py
pyAMICA/torch_impl/: __init__.py  adaptive_pdf.py  amica_torch.py  amica_torch_ng.py  amica_torch_v2.py  core.py  fortran_output.py  mixture_models.py  newton_optimizer.py  optimizers.py  utils.py
pytorch_debug_test/: out.txt
pytorch_output_test/: out.txt
results/decomp/: mlx-f32_16ch_Darwin-arm64.npz  mlx-f32_32ch_Darwin-arm64.npz  mlx-f32_48ch_Darwin-arm64.npz  mlx-f32_70ch_Darwin-arm64.npz  native-fortran-f64_16ch_Darwin-arm64.npz  native-fortran-f64_32ch_Darwin-arm64.npz  native-fortran-f64_48ch_Darwin-arm64.npz  native-fortran-f64_70ch_Darwin-arm64.npz  torch-cpu-f32_70ch_Darwin-arm64.npz  torch-cpu-f64_70ch_Darwin-arm64.npz  torch-mps-f32_70ch_Darwin-arm64.npz
results/decomp_hallu/: native-fortran-f64_16ch_Linux-x86_64.npz  native-fortran-f64_32ch_Linux-x86_64.npz  native-fortran-f64_48ch_Linux-x86_64.npz  native-fortran-f64_70ch_Linux-x86_64.npz  torch-cpu-f32_70ch_Linux-x86_64.npz  torch-cpu-f64_70ch_Linux-x86_64.npz  torch-cuda-f32_16ch_Linux-x86_64.npz  torch-cuda-f32_32ch_Linux-x86_64.npz  torch-cuda-f32_48ch_Linux-x86_64.npz  torch-cuda-f32_70ch_Linux-x86_64.npz  torch-cuda-f64_16ch_Linux-x86_64.npz  torch-cuda-f64_32ch_Linux-x86_64.npz  torch-cuda-f64_48ch_Linux-x86_64.npz  torch-cuda-f64_70ch_Linux-x86_64.npz
scripts/: sync_version.py
(+35 files in other folders)
