[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyAMICA"
version = "0.1.dev0"
description = "pyAMICA: Python implementation of the Adaptive Mixture ICA algorithm"
readme = "README.md"
authors = [
    {name = "Seyed Yahya Shirazi", email = "shirazi@ieee.org"},
]
maintainers = [
    {name = "Seyed Yahya Shirazi", email = "shirazi@ieee.org"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering"
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "tqdm",
    "json5"
]

[project.urls]
Homepage = "http://github.com/neuromechanist/pyAMICA"
Repository = "http://github.com/neuromechanist/pyAMICA"

[tool.setuptools]
packages = ["pyAMICA"]
package-data = {"pyAMICA" = ["data/*"]}
