[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyAMICA"
version = "0.1.dev0"
description = "pyAMICA: Python implementation of the Adaptive Mixture ICA algorithm"
readme = "README.md"
authors = [
    {name = "Seyed Yahya Shirazi", email = "shirazi@ieee.org"},
]
maintainers = [
    {name = "Seyed Yahya Shirazi", email = "shirazi@ieee.org"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering"
]
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "tqdm",
    "json5",
    "torch>=2.12.1",
    "threadpoolctl>=3",
]

# Optional Apple-Silicon GPU backend (AMICAMLXNG). MLX is Apple-only, so it is
# NOT a core dependency; install with `uv pip install mlx` or `pip install
# pyAMICA[mlx]`. `import pyAMICA` never requires it (mlx_impl is imported lazily).
[project.optional-dependencies]
mlx = ["mlx>=0.32"]

[project.urls]
Homepage = "http://github.com/neuromechanist/pyAMICA"
Repository = "http://github.com/neuromechanist/pyAMICA"

[tool.setuptools]
# List subpackages explicitly so the wheel is deterministic across platforms
# (a bare ["pyAMICA"] dropped torch_impl/ on some setuptools versions).
packages = ["pyAMICA", "pyAMICA.numpy_impl", "pyAMICA.torch_impl", "pyAMICA.mlx_impl"]
# numpy_impl/params.json is the NumPy backend's default parameter file, loaded at
# runtime via importlib/__file__, so it must ship in the wheel.
package-data = {"pyAMICA" = ["data/*"], "pyAMICA.numpy_impl" = ["params.json"]}

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-xdist>=3.6.1",
    "ruff>=0.15.0",
]

[tool.coverage.run]
source = ["pyAMICA"]
branch = true
omit = [
    "pyAMICA/tests/*",
    # argparse CLI entrypoint: exercised via subprocess, not unit-covered here.
    "pyAMICA/numpy_impl/cli.py",
    # Optional MLX backend (Apple Silicon only): its tests require MLX + an Apple
    # GPU, so CI (ubuntu, no mlx) cannot exercise it and always measures 0%. It is
    # covered locally by tests/mlx_tests/ on Apple hardware (issue #76).
    "pyAMICA/mlx_impl/*",
]

[tool.coverage.report]
show_missing = true
precision = 1
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]
